--- a/galeri.html
+++ b/galeri.html
@@ -1,17 +1,22 @@
 <!doctype html>
 <html lang="id">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Galeri Kegiatan - Ekstra Tari</title>
-  <link rel="stylesheet" href="assets/css/style.css">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Galeri Ekstra Tari</title>
+<link rel="stylesheet" href="assets/css/style.css">
+<style>
+#galeri-wall {display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:12px;}
+.wall-item {border:1px solid #ccc;padding:5px;border-radius:5px;background:#f9f9f9;text-align:center;}
+.wall-item img, .wall-item video {max-width:100%;border-radius:5px;margin-top:5px;}
+</style>
 </head>
 <body>
 
 <!-- Header -->
 <div class="header">
   <div class="brand">
-    <img src="assets/img/logo-sekolah.jpg" alt="logo sekolah">
+    <img src="assets/img/logo-sekolah.jpg" alt="logo sekolah" style="height:50px;margin-right:8px;">
     <div class="brand-text">
       <div class="title">Ekstra Tari</div>
       <div class="subtitle">SDI Ulumiyah Al Makruf</div>
@@ -35,15 +40,13 @@
   <a href="admin.html">Admin</a>
 </div>
 
-<!-- Kontainer -->
 <div class="container">
   <div class="hero">
-    <h1>Galeri Dokumentasi Kegiatan</h1>
-    <div id="galeri-grid"></div>
+    <h1>Galeri Kegiatan</h1>
+    <div id="galeri-wall"></div>
   </div>
 </div>
 
-<!-- Footer -->
 <div class="footer">
   <div>
     <strong>SDI Ulumiyah Al Makruf</strong><br>
@@ -53,15 +56,23 @@
 </div>
 
 <script>
-fetch('data/kegiatan.json').then(r=>r.json()).then(d=>{
-  const galeriEl=document.getElementById('galeri-grid');
-  d.galeri.forEach(g=>{
-    const fig=document.createElement('figure');
-    fig.innerHTML=`<img src="${g.img}" alt="${g.judul}">
-                   <figcaption>${g.tanggal} — ${g.judul}</figcaption>`;
-    galeriEl.appendChild(fig);
+// ===== Load Media =====
+function loadGaleri(){
+  const data = JSON.parse(localStorage.getItem('media')) || [];
+  const wall = document.getElementById('galeri-wall');
+  wall.innerHTML = '';
+  data.slice().reverse().forEach(m=>{
+    const div = document.createElement('div');
+    div.className='wall-item';
+    if(m.type==='image') div.innerHTML=`<img src="${m.url}" alt="media">`;
+    else div.innerHTML=`<video src="${m.url}" controls></video>`;
+    wall.appendChild(div);
   });
-});
+}
+
+// ===== Init =====
+loadGaleri();
+setInterval(loadGaleri,5000);
 </script>
 </body>
 </html>
