--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Ekstra Tari - Beranda</title>
 <link rel="stylesheet" href="assets/css/style.css">
-<style>
-.wall-item {border:1px solid #ccc;padding:10px;margin-bottom:10px;border-radius:5px;background:#f9f9f9;}
-.wall-item h3 {margin:0 0 5px;}
-.wall-item img, .wall-item video {max-width:100%;border-radius:5px;margin-top:5px;}
-</style>
 </head>
 <body>
 
@@ -41,20 +36,19 @@
 </div>
 
 <div class="container">
-
   <!-- Wall Kegiatan -->
   <div class="hero">
-    <h1>Agenda & Kegiatan Ekstra Tari</h1>
+    <h1>Agenda & Kegiatan</h1>
     <div id="wall-kegiatan"></div>
   </div>
 
-  <!-- Dokumentasi / Galeri -->
+  <!-- Preview Galeri -->
   <div class="hero">
-    <h1>Media / Dokumentasi</h1>
-    <div id="wall-media" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:12px"></div>
+    <h1>Preview Galeri</h1>
+    <div id="galeri-preview" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:12px"></div>
   </div>
 
-  <!-- Ringkasan Absensi Mingguan -->
+  <!-- Ringkasan Absensi -->
   <div class="hero">
     <h1>Ringkasan Absensi Mingguan</h1>
     <div style="overflow-x:auto;">
@@ -66,95 +60,84 @@
       </table>
     </div>
   </div>
-
 </div>
 
 <!-- Footer -->
 <div class="footer">
-  <div>
-    <strong>SDI Ulumiyah Al Makruf</strong><br>
-    Jl. Arbei Dsn. Jombangan Ds. Tertek, Pare, Kec. Pare, Kab. Kediri, Jawa Timur<br>
-    Email: sdiuam.almakruf@gmail.com | Telp: 085859830350 (Pak Khafid)
-  </div>
+  <strong>SDI Ulumiyah Al Makruf</strong><br>
+  Jl. Arbei Dsn. Jombangan Ds. Tertek, Pare, Kec. Pare, Kab. Kediri, Jawa Timur<br>
+  Email: sdiuam.almakruf@gmail.com | Telp: 085859830350 (Pak Khafid)
 </div>
 
 <script>
-// ===== Wall Kegiatan =====
-function loadKegiatan(){
-  const data = JSON.parse(localStorage.getItem('kegiatan')) || [];
+// ========== WALL KEGIATAN ==========
+function loadKegiatan(){ return JSON.parse(localStorage.getItem('kegiatan'))||[]; }
+function loadMedia(){ return JSON.parse(localStorage.getItem('media'))||[]; }
+
+function renderWall(){
   const wall = document.getElementById('wall-kegiatan');
-  wall.innerHTML = "";
-  data.slice().reverse().forEach(k=>{
+  wall.innerHTML="";
+  loadKegiatan().slice().reverse().forEach(k=>{
     const div = document.createElement('div');
-    div.className = 'wall-item';
-    div.innerHTML = `<h3>${k.judul}</h3><p>${k.deskripsi}</p><small>${k.tanggal}</small>`;
+    div.className='wall-item';
+    div.innerHTML=`<strong>${k.judul}</strong> (${k.tanggal})<br>${k.deskripsi}<hr>`;
     wall.appendChild(div);
   });
 }
 
-// ===== Wall Media / Galeri =====
-function loadMedia(){
-  const data = JSON.parse(localStorage.getItem('media')) || [];
-  const wall = document.getElementById('wall-media');
-  wall.innerHTML = "";
-  data.slice().reverse().forEach(m=>{
-    const div = document.createElement('div');
-    div.className = 'wall-item';
-    if(m.type==='image'){
-      div.innerHTML = `<img src="${m.url}" alt="media">`;
-    } else {
-      div.innerHTML = `<video src="${m.url}" controls></video>`;
-    }
-    wall.appendChild(div);
+// ========== PREVIEW GALERI ==========
+function renderGaleri(){
+  const gal = document.getElementById('galeri-preview');
+  gal.innerHTML="";
+  loadMedia().slice().reverse().forEach(m=>{
+    const fig = document.createElement('figure');
+    if(m.type==='image') fig.innerHTML=`<img src="${m.url}" alt="media" style="border-radius:8px"><figcaption>${m.url}</figcaption>`;
+    else fig.innerHTML=`<video src="${m.url}" controls style="border-radius:8px;max-width:100%"></video><figcaption>${m.url}</figcaption>`;
+    gal.appendChild(fig);
   });
 }
 
-// ===== Ringkasan Absensi =====
-function getStartOfWeek(date) {
-  const d = new Date(date);
-  const day = d.getDay();
-  const diff = d.getDate() - day + (day === 0 ? -6 : 1);
-  const monday = new Date(d.setDate(diff));
+// ========== ABSENSI MINGGUAN ==========
+function getStartOfWeek(date){
+  const d=new Date(date);
+  const day=d.getDay();
+  const diff=d.getDate()-day+(day===0?-6:1);
+  const monday=new Date(d.setDate(diff));
   monday.setHours(0,0,0,0);
   return monday;
 }
 
-function getEndOfWeek(date) {
-  const start = getStartOfWeek(date);
-  return new Date(start.getFullYear(), start.getMonth(), start.getDate() + 6, 23,59,59);
+function getEndOfWeek(date){
+  const start=getStartOfWeek(date);
+  return new Date(start.getFullYear(),start.getMonth(),start.getDate()+6,23,59,59);
 }
 
 function renderRingkasan(list){
-  const tbody = document.getElementById('absensi-ringkasan');
-  tbody.innerHTML = "";
-  const today = new Date();
-  const startWeek = getStartOfWeek(today);
-  const endWeek   = getEndOfWeek(today);
-  const filtered = list.filter(item=>{
-    const tgl = new Date(item.tanggal);
-    return tgl >= startWeek && tgl <= endWeek;
-  });
+  const tbody=document.getElementById('absensi-ringkasan');
+  tbody.innerHTML="";
+  const today=new Date();
+  const startWeek=getStartOfWeek(today);
+  const endWeek=getEndOfWeek(today);
+  const filtered=list.filter(item=>{ const tgl=new Date(item.tanggal); return tgl>=startWeek && tgl<=endWeek; });
+
   filtered.forEach(item=>{
-    let hadir = item.siswa.filter(s=>s.status==="Hadir").length;
-    let izin  = item.siswa.filter(s=>s.status==="Izin").length;
-    let sakit = item.siswa.filter(s=>s.status==="Sakit").length;
-    let alpa  = item.siswa.filter(s=>s.status==="Alpa").length;
-    const tr = document.createElement('tr');
-    tr.innerHTML = `<td><a href="absensi.html">${item.tanggal}</a></td>
-      <td>${hadir}</td><td>${izin}</td><td>${sakit}</td><td>${alpa}</td>`;
+    let hadir=item.siswa.filter(s=>s.status==="Hadir").length;
+    let izin=item.siswa.filter(s=>s.status==="Izin").length;
+    let sakit=item.siswa.filter(s=>s.status==="Sakit").length;
+    let alpa=item.siswa.filter(s=>s.status==="Alpa").length;
+    const tr=document.createElement('tr');
+    tr.innerHTML=`<td><a href="absensi.html">${item.tanggal}</a></td><td>${hadir}</td><td>${izin}</td><td>${sakit}</td><td>${alpa}</td>`;
     tbody.appendChild(tr);
   });
-  if(filtered.length===0) tbody.innerHTML = `<tr><td colspan="5">Belum ada absensi minggu ini</td></tr>`;
+
+  if(filtered.length===0) tbody.innerHTML=`<tr><td colspan="5">Belum ada absensi minggu ini</td></tr>`;
 }
 
-// ===== Inisialisasi =====
-loadKegiatan();
-loadMedia();
-let absensi = JSON.parse(localStorage.getItem('absensi')) || [];
-renderRingkasan(absensi);
-
-// update otomatis setiap 5 detik
-setInterval(()=>{ loadKegiatan(); loadMedia(); renderRingkasan(absensi); },5000);
+// ===== INIT =====
+renderWall();
+renderGaleri();
+const local=JSON.parse(localStorage.getItem('absensi'))||[];
+if(local.length>0) renderRingkasan(local);
 </script>
 </body>
 </html>
